--- a/index.html
+++ b/index.html
@@ -27,11 +27,12 @@
                     <h1>S Pradheesh Kumar</h1>
                     <h3>And I'm a <span class="text"></span></h3>
                     <p>I’m a cybersecurity enthusiast currently pursuing an Advanced Diploma in Cyber Defence. With a background in computer science and a keen interest in ethical hacking and network security,<br>I’m exploring hands-on tools to grow my skills and gain real-world experience.</p>
+                    <!-- Example for your social icons -->
                     <div class="home-sci">
-                        <a href="https://wa.me/+918590918657" style="--1:7"><i class='bx bxl-whatsapp' ></i></a>
-                        <a href="https://www.instagram.com/_p.r.a.d.h.e.e.s.h_?igsh=MmZoZXh3YndkMXI1" style="--1:8"><i class='bx bxl-instagram' ></i></a>
-                        <a href="https://www.linkedin.com/in/s-pradheesh-kumar17" style="--1:9"><i class='bx bxl-linkedin' ></i></a>
-                        <a href="https://github.com/spradheeshkumar" style="--1:10"><i class='bx bxl-github' ></i></a>
+                        <a href="https://wa.me/+918590918657" style="--i:7"><i class='bx bxl-whatsapp'></i></a>
+                        <a href="https://www.instagram.com/_p.r.a.d.h.e.e.s.h_?igsh=MmZoZXh3YndkMXI1" style="--i:8"><i class='bx bxl-instagram'></i></a>
+                        <a href="https://www.linkedin.com/in/s-pradheesh-kumar17" style="--i:9"><i class='bx bxl-linkedin'></i></a>
+                        <a href="https://github.com/spradheeshkumar" style="--i:10"><i class='bx bxl-github'></i></a>
                     </div>
                         <a href="your-resume.pdf" class="resume-btn" target="_blank" download>My Resume    <i class='bx bxs-download' ></i></a>
             </div>
@@ -248,5 +249,11 @@
 </div>
         <script src="main.js"></script>
         <a href="#" class="top"><i class='bx bx-chevron-up' style='color:#000000' ></i></a>
-    </body> 
+        <script>
+if (window.innerWidth < 600) {
+    document.body.innerHTML = "<div style='display:flex;justify-content:center;align-items:center;height:100vh;font-size:1.5rem;text-align:center;color:#fff;background:#051129;'>This website is not available on mobile devices. Please use a desktop or tablet.</div>";
+    document.body.style.background = "#051129";
+}
+</script>
+</body>
 </html>
