--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                         <a href="https://www.linkedin.com/in/s-pradheesh-kumar17" style="--i:9"><i class='bx bxl-linkedin'></i></a>
                         <a href="https://github.com/spradheeshkumar" style="--i:10"><i class='bx bxl-github'></i></a>
                     </div>
-                        <a href="your-resume.pdf" class="resume-btn" target="_blank" download>My Resume    <i class='bx bxs-download' ></i></a>
+                        <a href="https://drive.google.com/file/d/1wvPjyQTAUCp5POYPAOBv-zl6Bx5EEecG/view?usp=drivesdk " class="resume-btn" target="_blank" download>My Resume    <i class='bx bxs-download' ></i></a>
             </div>
         </div>
     </div>
